fix gap after pinned tab if it's the only tab

--- a/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
+++ b/firefox/etc/.mozilla/firefox/main/chrome/userChrome.css
@@ -394,15 +394,16 @@ toolbarbutton#alltabs-button {
 .tabbrowser-tab[pinned="true"]:only-of-type::after {
 	content: '';
 	display: block !important;
-	width: calc(100vw - 35px) !important;
-	height: 40px !important;
+	width: 100vw !important;
+	height: var(--tab-min-height) !important;
 	margin: 0 !important;
 	background-color: var(--bg1) !important;
 	position: absolute;
 	top: 1px;
-	left: 34px;
+	left: 0;
 	bottom: 0;
 	padding-right: 1px;
+	z-index: -2;
 	pointer-events: none !important;
 }
 
